--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .red {
   color: red;
 }
@@ -10,7 +6,7 @@
   font-weight: bold;
 }
 
-.App button {
+.Cockpit button {
   border: 1px solid blue;
   padding: 16px;
   background-color: green;
@@ -19,16 +15,16 @@
   cursor: pointer;
 }
 
-.App button:hover {
+.Cockpit button:hover {
   background-color: lightgreen;
   color: black;
 }
 
-.App button.red {
+.Cockpit button.red {
   background-color: red;
 }
 
-.App button.red:hover {
+.Cockpit button.red:hover {
   background-color: salmon;
   color: black;
 }
